# board/views.py
@@ -15,49 +15,18 @@ class BoardsListView(ListAPIView):
     permission_classes = [IsAuthenticated]
     pagination_class = CustomPagination
     filter_backends = [SearchFilter, DjangoFilterBackend]
-    search_fields = ['title', 'body', 'author']  # Aggiusta secondo le necessità
+    search_fields = ['title', 'author']  # Aggiustato per corrispondere al YAML
     filterset_fields = ['type']
 
     def get_queryset(self):
         queryset = super().get_queryset()
-        return queryset
-    
-
-# class WorksiteListView(ListCreateAPIView):
-#     queryset = Worksites.objects.all()
-#     serializer_class = WorksiteSerializer
-#     #permission_classes = [IsAuthenticated]
-    
-#     pagination_class = CustomPagination
-#     filter_backends = [SearchFilter, DjangoFilterBackend]
-#     search_fields = ['name', 'address']
-#     filterset_class = WorksitesFilter
-#     parser_classes = (MultiPartParser, FormParser)
-
-#     def get_queryset(self):
-#         queryset = super().get_queryset().order_by('-id')
-#         status = self.request.query_params.get('status', None)
+        order_param = self.request.query_params.get('order', 'desc')
+        order_by_field = self.request.query_params.get('order_by', 'id')  # Prendi il campo da 'order_by', default a 'id'
         
-#         if status is not None:
-#             try:
-#                 status = int(status)
-#             except ValueError:
-#                 return queryset.none()  # Return an empty queryset if status is invalid
-            
-#             if status == 0:
-#                 return queryset
-#             elif status == 1:
-#                 return queryset.filter(is_open=True)
-#             elif status == 2:
-#                 return queryset.filter(is_open=False)
-
-#         return queryset
-    
-#     def post(self, request, *args, **kwargs):
-#         # Handling multipart data including files
-#         serializer = self.serializer_class(data=request.data)
-#         if serializer.is_valid():
-#             serializer.save()
-#             return Response({"status": "success", "data": {"note": serializer.data}}, status=status.HTTP_201_CREATED)
-#         else:
-#             return Response({"status": "fail", "message": serializer.errors}, status=status.HTTP_400_BAD_REQUEST)
+        # Applica direttamente l'ordinamento
+        if order_param == 'desc':
+            queryset = queryset.order_by('-' + order_by_field)  # Ordinamento discendente
+        else:
+            queryset = queryset.order_by(order_by_field)  # Ordinamento ascendente
+        
+        return queryset
